[gd_scene load_steps=8 format=3 uid="uid://f2enjgidilcu"]

[ext_resource type="Script" path="res://classes/mind/player/credit_hud.gd" id="1_2afpm"]
[ext_resource type="Texture2D" uid="uid://dhp7516jv0rqq" path="res://classes/mind/player/Credit.png" id="1_x5dls"]
[ext_resource type="FontFile" uid="uid://bm53fppaujf5v" path="res://ui/font/Pixeled.ttf" id="2_72wck"]
[ext_resource type="Shader" path="res://classes/mind/player/OnFootCrosshair.gdshader" id="2_hvy2c"]
[ext_resource type="Texture2D" uid="uid://diar662cum67" path="res://classes/mind/player/OnFootCrosshair.svg" id="5_7irg0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3und"]
shader = ExtResource("2_hvy2c")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dbc7h"]
shader = ExtResource("2_hvy2c")

[node name="CreditHud" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_2afpm")

[node name="Container" type="Control" parent="."]
material = SubResource("ShaderMaterial_r3und")
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="CreditSprite" type="Sprite2D" parent="Container"]
texture_filter = 1
position = Vector2(632.172, 7.82813)
scale = Vector2(1.02148, 1.02148)
texture = ExtResource("1_x5dls")

[node name="CreditLabel" type="Label" parent="Container"]
layout_mode = 2
offset_left = 48.0
offset_top = -8.0
offset_right = 626.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("2_72wck")
theme_override_font_sizes/font_size = 10
text = "0
"
horizontal_alignment = 2

[node name="Queue" type="Control" parent="Container"]
anchors_preset = 0
offset_top = 6.0
offset_right = 40.0
offset_bottom = 46.0

[node name="OnFootCrosshair" type="Sprite2D" parent="Container"]
material = SubResource("ShaderMaterial_dbc7h")
position = Vector2(320, 180)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_7irg0")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
